packages/parser/test/parser/E0108.txt
a := [1, ,]
===== err =====
anonymous:1:9: ParseError: E0108 - Expected expression in array expression
1 | a := [1, ,]
  |         ^
